add random forest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "2.1.1"
 fastlmm = "0.6.7"
 geneview = "0.2.1"
 matplotlib = "3.8.0"
+xgboost = "2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
