--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,22 +39,22 @@ jobs:
           - os: macos-latest
             TARGET: macos
             CMD_BUILD: >
-                pyinstaller -F -w -n clipster -i resources/clipster.icns cli.py &&
+                pyinstaller -F -w -n gwastic_desktop main_gui.py &&
                 cd dist/ &&
-                zip -r9 clipster clipster.app/
-            OUT_FILE_NAME: clipster.zip
+                zip -r9 gwastic_desktop gwastic_desktop.app/
+            OUT_FILE_NAME: gwastic_desktop.zip
             ASSET_MIME: application/zip
           - os: windows-latest
             TARGET: windows
-            CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.ico cli.py
-            OUT_FILE_NAME: clipster.exe
+            CMD_BUILD: pyinstaller -F -w -n gwastic_desktop main_gui.py
+            OUT_FILE_NAME: gwastic_desktop.exe
             ASSET_MIME: application/vnd.microsoft.portable-executable
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
